--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -5,3 +5,44 @@
         background-color: red;
     }
 }
+$gold: #C1AB65;
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+#about {
+    background-color: #000000;
+    padding:180px 0px;
+}
+
+.hText {
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 42px;
+    line-height: 30px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: $gold;
+    margin-bottom: 80px;
+}
+
+p.pText{
+    font-family: Josefin Sans,sans-serif;
+    font-style: normal;
+    font-weight: 100;
+    font-size: 24px;
+    line-height: 36px;
+    color: white;
+    letter-spacing:1px;
+}
+
+.gold {
+    font-size: 32px;
+    line-height: 36px;
+    color: $gold;
+}
