--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -11,11 +11,15 @@ $gold: #C1AB65;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: #000000;
 }
 
 #about {
-    background-color: #000000;
     padding:180px 0px;
+    .gold {
+        font-size: 32px;
+        line-height: 36px;
+    }
 }
 
 .hText {
@@ -42,7 +46,5 @@ p.pText{
 }
 
 .gold {
-    font-size: 32px;
-    line-height: 36px;
     color: $gold;
 }
