--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -1,10 +1,3 @@
-//.test-wr {
-//    &-for-scss {
-//        height: 100px;
-//        width: 100px;
-//        background-color: red;
-//    }
-//}
 $gold: #C1AB65;
 
 * {
@@ -14,6 +7,7 @@ $gold: #C1AB65;
     background-color: #000000;
 }
 
+// ABOUT //
 #about {
     padding:180px 0px;
     .gold {
@@ -91,5 +85,42 @@ p.pText{
         font-size: 30px;
         line-height: 35px;
         margin-bottom: 20px;
+    }
+}
+
+// REGISTER //
+#register {
+    .hText {
+        margin-bottom: 25px;
+    }
+}
+
+h4.hSubText {
+    font-family: Poppins, sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: white!important;
+}
+
+form.regForm {
+    input {
+        font-family: Poppins, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 0em;
+        text-align: left;
+        background-color:rgba(0,0,0,0) !important;
+        border-bottom: 2px solid white;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-radius: 0;
+        //border:none !important;
     }
 }
