--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -93,17 +93,23 @@ p.pText{
     .hText {
         margin-bottom: 25px;
     }
+    .img-fluid {
+        max-width: 80%;
+    }
+;
 }
 
 h4.hSubText {
     font-family: Poppins, sans-serif;
     font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 36px;
-    letter-spacing: 0em;
+    letter-spacing: 1px;
     text-align: center;
     color: white!important;
+    text-transform: uppercase;
+    margin-bottom: 40px;
 }
 
 form.regForm {
@@ -123,4 +129,36 @@ form.regForm {
         border-radius: 0;
         //border:none !important;
     }
+    input:focus {
+        box-shadow: none;
+    }
+}
+
+.rect {
+    position: absolute;
+    background: rgba(193, 171, 101, 0.2);
+    padding: 30px 30px;
+    top: 50%;
+    right: 5%;
+    transform: translateY(-50%);
+}
+
+.rText {
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: 100;
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: 2px;
+    color: white;
+    background-color: transparent;
+    text-align: left;
+}
+
+.blockCenter {
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
