--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -1,4 +1,6 @@
 $gold: #C1AB65;
+$grey: #CCCCCC;
+$transparent-grey: rgba(193, 171, 101, 0.2);
 
 * {
     padding: 0;
@@ -90,13 +92,14 @@ p.pText{
 
 // REGISTER //
 #register {
-    .hText {
+    padding:180px 0px;
+    &.hText {
         margin-bottom: 25px;
     }
-    .img-fluid {
-        max-width: 80%;
-    }
-;
+}
+
+.imgAbout {
+    max-width: 80%!important;
 }
 
 h4.hSubText {
@@ -127,16 +130,42 @@ form.regForm {
         border-left: none;
         border-right: none;
         border-radius: 0;
+        color: $grey!important;
         //border:none !important;
+        &:focus {
+            box-shadow: none;
+            border-bottom: 2px solid $gold;
+        }
     }
-    input:focus {
-        box-shadow: none;
+    label.form-check-label {
+        font-family: Poppins, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 0em;
+        color: $grey;
+    }
+    .form-check {
+        margin-top: 25px;
+        margin-bottom: 40px;
     }
 }
 
+.aLink {
+    color: $gold;
+    &:hover {
+        color: $gold;
+    }
+}
+
+//.aLink:hover {
+//    color: $gold;
+//}
+
 .rect {
     position: absolute;
-    background: rgba(193, 171, 101, 0.2);
+    background: $transparent-grey;
     padding: 30px 30px;
     top: 50%;
     right: 5%;
@@ -161,4 +190,25 @@ form.regForm {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+#checkRules {
+    margin-top: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+button.btn-gold {
+    font-family: Poppins, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 30px;
+    letter-spacing: 1px;
+    text-align: center;
+    background-color: $transparent-grey;
+    color: white;
+    padding: 10px 60px;
+    border-radius: 20px;
 }
