--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -9,3 +9,10 @@
     text-align: center;
     color: white;
 }
+
+#footer {
+    display: flex;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
