--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -6,6 +6,114 @@ $gold: #C1AB65;
     box-sizing: border-box;
     background-color: #000000;
 }
+//Title
+#title{
+    width: 100%;
+    height: 100vh;
+    background: url("../../../public/img/title.jpg") center no-repeat;
+    background-size: cover;
+}
+.title-wrap{
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.title-wrap .container{
+    background-color: transparent;
+}
+.title-wrap h2{
+    font-family: "Playfair Display";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 80px;
+    color: #ffffff;
+    background-color: transparent;
+    margin: 0 auto;
+}
+.title-wrap p{
+    color: $gold;
+    font-size: 32px;
+    font-style: normal;
+    font-family: "Playfair Display";
+    padding: 10px 0;
+    background-color: transparent;
+}
+.search{
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    width: 90%;
+    background-color: transparent;
+}
+.search input{
+    background-color: #FDFDFD;
+    padding: 12px 20px;
+    border: none;
+    font-size: 24px;
+    font-family: "Josefin Sans", sans-serif;
+    font-style: normal;
+    color: #161616;
+    margin: 0;
+}
+.search:focus,.search:active:focus,.search.active:focus,
+.search.focus,.search:active.focus,.search.active.focus {
+    outline: none;
+}
+.search button{
+    background: url(../../../public/img/sea.jpg) center no-repeat;
+    border: none;
+    outline: none;
+    width: 65px;
+    height: 60px;
+    background-color: #FDFDFD;
+}
+.search button:focus{
+    outline: none;
+}
+.button-mob{
+    display: none;
+}
+@media (max-width: 375px) {
+    .title-wrap h2{
+        font-size: 24px;
+    }
+    .title-wrap p{
+        font-size: 18px;
+    }
+    .title-wrap form{
+        display: none;
+    }
+    .button-mob{
+        display: block;
+        margin: 0 auto;
+        background-color: rgba(193, 171, 101, 0.2);
+        border: none;
+        border-radius: 50px;
+        outline: none;
+        padding: 8px 33px;
+    }
+    .button-mob:focus{
+        outline: none;
+    }
+    .button-mob:hover{
+        transform: translate3d(0,5px,0);
+        transition: transform 0.3s;
+    }
+    .button-mob a{
+        color: #ffffff;
+        font-size: 12px;
+        font-family: "Poppins";
+        font-style: normal;
+        text-transform: uppercase;
+    }
+    .button-mob a:hover{
+        color: #ffffff;
+        text-decoration: none;
+    }
+}
 
 // ABOUT //
 #about {
@@ -87,7 +195,106 @@ p.pText{
         margin-bottom: 20px;
     }
 }
+//Categories
+.categories-mob{
+    display: none;
+}
+#categories{
+    padding: 50px 0;
+}
+#categories .container{
+    padding: 40px 10px;
+}
+.cat-wrap--card{
+    position: relative;
+}
+.cat-wrap--card:hover .cat-wrap--card---img img{
+    opacity: 1;
+}
+.cat-wrap--card---img{
+    background: rgba(0, 0, 0, 0.5);
+    //opacity: 0.7;
+}
+.cat-wrap--card---img img{
+    width: 100%;
+    height: auto;
+    transition: opacity 0.3s linear;
+    padding: 30px 0;
+    opacity: 0.5;
+}
+.cat-wrap--cars---text a{
+    width: 100%;
+    color: $gold;
+    font-size: 25px;
+    font-family: "Playfair Display";
+    font-weight: 700;
+    font-style: normal;
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translate3d(0,-50%,0);
 
+}
+.cat-wrap--cars---text a:hover{
+    text-decoration: none;
+    color: $gold;
+}
+@media (max-width: 375px) {
+    #categories .container{
+        display: none;
+    }
+    #categories .categories-mob{
+        display: block;
+        background: url("../../../public/img/cmob.jpg") center no-repeat;
+        background-size: cover;
+    }
+    #categories .categories-mob--bac{
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .categories-mob h3{
+        font-family: "Playfair Display";
+        font-size: 24px;
+        font-style: normal;
+        color: $gold;
+        text-align: center;
+        text-transform: uppercase;
+        background-color: transparent;
+        padding: 20px 0 0 0;
+    }
+    .categories-mob--wrap{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 5px 50px;
+        background-color: transparent;
+    }
+    .categories-mob--wrap a{
+        width: 100%;
+        font-family: "Playfair Display";
+        font-style: normal;
+        font-size: 12px;
+        text-transform: uppercase;
+        text-align: center;
+        color: #ffffff;
+        padding: 20px 0;
+        position: relative;
+    }
+    .categories-mob--wrap a:nth-child(-n+8):before{
+        display: block;
+        width: 100%;
+        content: '';
+        position: absolute;
+        bottom: 0;
+        border-bottom: 2px solid #ffffff;
+    }
+    .categories-mob--wrap a:hover{
+        text-decoration: none;
+        color: #ffffff;
+    }
+}
 // REGISTER //
 #register {
     .hText {
