--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -23,7 +23,7 @@
 .watch-list{
   font-weight: 900!important;
 }
-#header a{
+.header-nav--item{
   font-family: "Josefin Sans",sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -32,35 +32,182 @@
   text-transform: uppercase;
   padding: 0 10px;
 }
-#header a:hover{
+.header-nav--item---list{
+  font-weight: 900;
+  font-family: "Josefin Sans",sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  color: #ffffff;
+  text-transform: uppercase;
+  padding: 0 10px;
+}
+.header-nav--item:hover{
   text-decoration: none;
   color: $gold;
   transition: color 0.2s linear;
 }
-#header nav{
+.header-nav{
   display: flex;
   justify-content: space-around;
   background-color: #161616;
 }
-#header li{
+.header-nav li{
   list-style: none;
   background-color: #161616;
 }
-
-@media (max-width: 375px) {
+.hamburger-menu{
+  display: none;
+}
+#content{
+  display: none;
+}
+@media (max-width: 414px) {
   #header .row{
-    padding: 15px;
+    padding: 20px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   #header svg{
     display: none;
   }
   #header .logo-mob{
     display: block;
+    position: absolute;
   }
   #header nav{
     display: none;
   }
-  #header a{
-    display: none;
+
+//  menu
+  .hamburger-menu{
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    background-color: transparent;
+  }
+  #menu-toggle {
+    opacity: 0;
+  }
+  #menu-toggle:checked ~ .menu-btn > span {
+    transform: rotate(45deg);
+  }
+  #menu-toggle:checked ~ .menu-btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu-toggle:checked ~ .menu-btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu-toggle:checked ~ .menu-box {
+    visibility: visible;
+    left: 0;
+    top: 7%;
+    width: 100%;
+    padding: 20px 0;
+    background-color: #000;
+  }
+  .menu-btn {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 35px;
+    height: 25px;
+    cursor: pointer;
+    z-index: 1;
+    background-color: transparent;
+    margin: 20px 10px;
+  }
+  .menu-btn > span,
+  .menu-btn > span::before,
+  .menu-btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #ffffff;
+    transition-duration: .25s;
+  }
+  .menu-btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu-btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  .menu-box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    right: -100%;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #000000;
+    //box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+    transition-duration: .25s;
+  }
+  .menu-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    background-color: #000000;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 20px 0!important;
+    transition-duration: .25s;
+  }
+  .menu-item--list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    background-color: #000000;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 20px 0!important;
+    transition-duration: .25s;
+  }
+  .menu-item:hover  {
+    color: $gold;
+    text-decoration: none;
+    transition: color 0.1s linear;
+  }
+  .menu-item--list:hover  {
+    color: $gold;
+    text-decoration: none;
+    transition: color 0.1s linear;
+  }
+
+}
+@media (max-width: 320px) {
+  #menu-toggle:checked ~ .menu-box{
+    top: 11%;
+  }
+  .menu-item{
+    font-size: 16px;
+  }
+  .menu-item--list{
+    font-size: 16px;
+  }
+}
+@media (max-width: 280px) {
+  #menu-toggle:checked ~ .menu-box{
+    top: 9%;
   }
 }
