--- a/src/assets/styles/_register.scss
+++ b/src/assets/styles/_register.scss
@@ -165,6 +165,9 @@ button.btn-gold {
 }
 
 @media (max-width: 475px) {
+    #register {
+        padding: 35% 0px!important;
+    }
     h4.hSubText {
         font-size: 18px;
         line-height: 24px;
