--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -50,20 +50,20 @@ $transparent-grey: rgba(193, 171, 101, 0.2);
     margin: 0 auto;
     display: flex;
     align-items: center;
-    width: 70%;
+    width: 60%;
     background-color: transparent;
     position: relative;
 }
 .search input{
     width: 100%;
     background-color: #FDFDFD;
-    padding: 12px 20px;
+    padding: 6px 20px;
     border: none;
-    font-size: 24px;
+    font-size: 20px;
     font-family: "Josefin Sans",sans-serif;
     font-style: normal;
     color: #161616;
-    margin: 0;
+    margin: 40px 0;
 }
 .search:focus,.search:active:focus,.search.active:focus,
 .search.focus,.search:active.focus,.search.active.focus {
@@ -74,7 +74,7 @@ $transparent-grey: rgba(193, 171, 101, 0.2);
     border: none;
     outline: none;
     width: 65px;
-    height: 60px;
+    height: 20px;
     background-color: #FDFDFD;
     position: absolute;
     right: 0;
@@ -85,13 +85,70 @@ $transparent-grey: rgba(193, 171, 101, 0.2);
 .button-mob{
     display: none;
 }
-@media (max-width: 414px) {
+@media (max-width: 995px) {
     .title-wrap h2{
-        font-size: 24px;
-        width: 65%;
+        font-size: 43px;
+    }
+    .title-wrap p{
+        font-size: 22px;
+    }
+    .search input{
+        padding: 2px 20px;
+        margin: 25px 0;
+        font-size: 18px;
+    }
+}
+@media (max-width: 770px) {
+    .title-wrap h2{
+        font-size: 35px;
+        width: 75%;
+    }
+    .title-wrap p{
+        font-size: 20px;
+    }
+    .search input{
+        margin: 15px 0;
+        font-size: 15px;
+        padding: 4px 10px 0;
+    }
+    .search button{
+        width: 34px;
+    }
+}
+@media (max-width: 510px) {
+    .title-wrap h2{
+        font-size: 30px;
+    }
+    .search input{
+        margin: 10px 0;
+    }
+    .search button{
+        width: 34px;
+    }
+}
+@media (max-width: 450px) {
+    .title-wrap h2{
+        width: 80%;
     }
     .title-wrap p{
         font-size: 18px;
+    }
+    .search input{
+        font-size: 14px;
+    }
+    .search button{
+        width: 40px;
+    }
+}
+@media (max-width: 414px) {
+    .title-wrap h2{
+        font-size: 24px;
+        width: 70%;
+    }
+    .title-wrap p{
+        font-size: 18px;
+        margin: 0;
+        padding: 18px 0;
     }
     .title-wrap form{
         display: none;
@@ -125,6 +182,11 @@ $transparent-grey: rgba(193, 171, 101, 0.2);
         text-decoration: none;
     }
 }
+@media (max-width: 370px) {
+    .title-wrap h2{
+        width: 70%;
+    }
+}
 
 // ABOUT //
 #about {
@@ -134,7 +196,6 @@ $transparent-grey: rgba(193, 171, 101, 0.2);
         line-height: 36px;
     }
 }
-
 .hText {
     font-family: Playfair Display;
     font-style: normal;
@@ -253,7 +314,13 @@ p.pText{
     text-decoration: none;
     color: $gold;
 }
-@media (max-width: 414px) {
+@media (max-width: 780px) {
+    .cat-wrap--cars---text a{
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 575px) {
     #categories{
         padding: 50px 0 0 0;
     }
@@ -264,6 +331,10 @@ p.pText{
         display: block;
         background: url("../../../public/img/cmob.jpg") center no-repeat;
         background-size: cover;
+        position: absolute;
+        top: 64px;
+        left: 0;
+        right: 0;
     }
     #categories .categories-mob--bac{
         background: rgba(0, 0, 0, 0.6);
@@ -276,29 +347,30 @@ p.pText{
         text-align: center;
         text-transform: uppercase;
         background-color: transparent;
-        padding: 35px 0 0 0;
+        padding: 20px 0 0 0;
     }
     .categories-mob--wrap{
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 5px 50px;
+        padding: 0 50px;
         background-color: transparent;
     }
     .categories-mob--wrap a{
         width: 100%;
         font-family: "Playfair Display";
         font-style: normal;
-        font-size: 16px;
+        font-size: 15px;
         text-transform: uppercase;
         text-align: center;
         color: #ffffff;
-        padding: 20px 0;
+        padding: 15px 0;
         position: relative;
     }
     .categories-mob--wrap a:nth-child(-n+8):before{
         display: block;
         width: 100%;
+        margin: 0 auto;
         content: '';
         position: absolute;
         bottom: 0;
