register btn and mob version

--- a/src/assets/styles/_register.scss
+++ b/src/assets/styles/_register.scss
@@ -94,6 +94,7 @@ form.regForm {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    height: 100%;
 }
 
 #checkRules {
@@ -119,7 +120,16 @@ button.btn-gold {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    &:hover, :active {
+        background-color: $gold;
+        color: black;
+    }
+    &:focus {
+        outline: none;
+        box-shadow: none;
+    }
 }
+
 
 .divMob {
     display: none;
@@ -159,16 +169,21 @@ button.btn-gold {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
+    #register {
+        padding: 15% 0px;
+    }
     .imgAbout, .rect {
         display: none;
+    }
+    .hMobDiv {
+        height: 490px;
     }
 }
 
 @media (max-width: 475px) {
     #register {
-        padding-top: 35%!important;
-        padding-bottom: 0%!important;
+        padding:10% 0px;
     }
     h4.hSubText {
         font-size: 18px;
@@ -200,7 +215,7 @@ button.btn-gold {
         & .textOnImg {
             display: flex;
             flex-direction: column;
-            align-content: space-between;
+            justify-content: space-between;
             background-color: transparent;
             position: absolute;
             top: 50%;
@@ -220,8 +235,5 @@ button.btn-gold {
                 text-transform: uppercase;
             }
         }
-    }
-    .hMobDiv {
-        height: 490px;
     }
 }
