--- a/src/assets/styles/_about.scss
+++ b/src/assets/styles/_about.scss
@@ -55,18 +55,19 @@ p.pText{
 }
 
 @media (max-width: 425px) {
-    #about, #register {
-        padding:20px 0px;
+    #about{
+        padding:10% 0px;
     }
     .mobNotVisible {
         visibility: hidden;
         height: 0px!important;
     }
     p.pText {
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 17px;
+        line-height: 28px;
         margin-bottom: 20px;
         text-align: center;
+        padding: 0 15px;
     }
     #about .gold {
         font-size: 26px;
@@ -75,6 +76,6 @@ p.pText{
     .hText {
         font-size: 30px;
         line-height: 35px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
 }
