--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,17 @@
-@import "home";
-@import "about";
-@import "register";
-@import "footer";
-@import "fonts";
-@import "header";
+// Basics
 @import "var";
+@import "fonts";
+
+// Basic components
+@import "header";
+@import "footer";
+
+// Homepage
+@import "home";
+@import "title";
+@import "about";
+@import "categories";
+@import "register";
+
+
+
