general bugs in home and films

--- a/src/assets/styles/_categories.scss
+++ b/src/assets/styles/_categories.scss
@@ -13,6 +13,7 @@
 }
 .cat-wrap--card:hover .cat-wrap--card---img img{
   opacity: 1;
+  cursor: pointer;
 }
 .cat-wrap--card---img{
   background: rgba(0, 0, 0, 0.5);
