--- a/src/assets/styles/_films.scss
+++ b/src/assets/styles/_films.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   background: url("../../../public/img/films/films.png") center no-repeat;
   background-size: cover;
 }
@@ -10,9 +10,10 @@
   font-family: "Playfair Display";
   text-align: center;
   margin: 0 auto;
+  letter-spacing: 2px;
 }
 .films-text h1{
-  font-size: 45px;
+  font-size: 40px;
   font-weight: 700;
   font-style: normal;
   text-transform: uppercase;
@@ -20,7 +21,7 @@
   padding: 22px 0;
 }
 .films-text p{
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 400;
   font-style: normal;
   color: #ffffff;
@@ -63,19 +64,14 @@
     padding: 15px;
   }
   .films-text p{
-    font-family: "Montserrat", sans-serif;
     padding: 0 10px;
-    font-size: 16px;
-    line-height: 30px;
+    font-size: 14px;
+    line-height: 20px;
   }
 }
 @media (max-width: 320px) {
   .films-text h1{
     font-size: 25px;
     padding: 12px;
-  }
-  .films-text p{
-    font-size: 16px;
-    line-height: 25px;
   }
 }
