--- a/src/assets/styles/_films.scss
+++ b/src/assets/styles/_films.scss
@@ -21,7 +21,7 @@
   padding: 22px 0;
 }
 .films-text p{
-  font-size: 28px;
+  font-size: 26px;
   font-weight: 400;
   font-style: normal;
   color: #ffffff;
@@ -29,29 +29,30 @@
 }
 
 
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   .films-text h1{
-    font-size: 40px;
+    font-size: 36px;
   }
   .films-text p{
-    font-size: 28px;
+    font-size: 22px;
+    padding: 0;
   }
 }
 @media (max-width: 770px) {
   .films-text h1{
-    font-size: 38px;
+    font-size: 32px;
   }
   .films-text p{
-    font-size: 25px;
+    font-size: 20px;
     padding: 0 0;
   }
 }
 @media (max-width: 500px) {
   .films-text h1{
-    font-size: 32px;
+    font-size: 26px;
   }
   .films-text p{
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 @media (max-width: 425px) {
@@ -60,18 +61,17 @@
     height: 40vh;
   }
   .films-text h1{
-    font-size: 28px;
+    font-size: 24px;
     padding: 15px;
   }
   .films-text p{
     padding: 0 10px;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 20px;
   }
 }
 @media (max-width: 320px) {
   .films-text h1{
-    font-size: 25px;
     padding: 12px;
   }
 }
