--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,8 +14,11 @@
 @import "register";
 
 // Films
-@import "films";
-@import "film_main";
 @import "film_view";
+@import "films";
+
+//LogIn
+@import "login";
+@import "authorization";
 
 
