--- a/src/assets/styles/_categories.scss
+++ b/src/assets/styles/_categories.scss
@@ -2,31 +2,29 @@
 .categories-mob{
   display: none;
 }
-#categories{
-  padding: 50px 0;
-}
 #categories .container{
   padding: 40px 10px;
 }
 .cat-wrap--card{
   position: relative;
 }
-.cat-wrap--card:hover .cat-wrap--card---img img{
+.cat-wrap .col-4{
+  padding: 20px;
+}
+.cat-wrap--card---img:hover img {
   opacity: 1;
   cursor: pointer;
 }
 .cat-wrap--card---img{
   background: rgba(0, 0, 0, 0.5);
-  //opacity: 0.7;
 }
 .cat-wrap--card---img img{
   width: 100%;
   height: auto;
   transition: opacity 0.3s linear;
-  padding: 30px 0;
   opacity: 0.5;
 }
-.cat-wrap--cars---text a{
+.cat-wrap--card---text a{
   width: 100%;
   color: $gold;
   font-size: 25px;
@@ -40,9 +38,8 @@
   left: 0;
   z-index: 1;
   transform: translate3d(0,-50%,0);
-
 }
-.cat-wrap--cars---text a:hover{
+.cat-wrap--card---text a:hover{
   text-decoration: none;
   color: $gold;
 }
