film-main searching

--- a/src/assets/styles/_film_main.scss
+++ b/src/assets/styles/_film_main.scss
@@ -67,7 +67,7 @@
       font-size: 13px;
       padding: 8px 10px;
       background-color: $sticker;
-      max-width: 100px;
+      width: fit-content;
       color: $sticker-text;
       margin-bottom: 25px;
       text-align: center;
