--- a/src/assets/styles/_film_main.scss
+++ b/src/assets/styles/_film_main.scss
@@ -27,9 +27,34 @@
     margin-right: 0;
   }
 
-  &.ac {
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #707070;
+    text-align: center;
+    line-height: 37px;
+  }
+
+  &.active {
     background-color: $sticker;
-    color: black;
+
+    a {
+      color: black !important;
+    }
+  }
+  &.disabled a {
+    color: #707070;
+  }
+
+  a:focus {
+    outline: none;
+  }
+
+  a:hover {
+    text-decoration: none;
+    color: #707070;
+    
   }
 
   &:hover {
