--- a/src/assets/styles/_categories.scss
+++ b/src/assets/styles/_categories.scss
@@ -2,6 +2,9 @@
 .categories-mob{
   display: none;
 }
+#categories{
+  padding: 60px 0 30px 0;
+}
 #categories .container{
   padding: 40px 10px;
 }
