--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -36,19 +36,11 @@
   text-transform: uppercase;
   padding: 0 10px;
 }
-.header-nav--item---list{
-  font-weight: 900;
-  font-family: "Josefin Sans",sans-serif;
-  font-style: normal;
-  font-size: 16px;
-  color: #ffffff;
-  text-transform: uppercase;
-  padding: 0 10px;
-}
 .header-nav--item:hover{
   text-decoration: none;
   color: $gold;
   transition: color 0.2s linear;
+  cursor: pointer;
 }
 .header-nav--item---animate{
   position: absolute;
@@ -87,9 +79,7 @@
   color: #111;
   transition: color 0.5s linear;
 }
-.watch-list{
-  font-weight: 900!important;
-}
+
 //mobile
 .hamburger-menu{
   display: none;
@@ -252,31 +242,11 @@
     padding: 20px 0!important;
     transition-duration: .25s;
   }
-  .menu-item--list{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #fff;
-    background-color: #000000;
-    font-family: "Josefin Sans", sans-serif;
-    font-size: 18px;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 20px 0!important;
-    transition-duration: .25s;
-  }
   .menu-item:hover  {
     color: $gold;
     text-decoration: none;
     transition: color 0.1s linear;
   }
-  .menu-item--list:hover  {
-    color: $gold;
-    text-decoration: none;
-    transition: color 0.1s linear;
-  }
-
 }
 @media (max-width: 770px) {
   .search-mob--wrap input:focus{
