fixed films and modals

--- a/src/assets/styles/_var.scss
+++ b/src/assets/styles/_var.scss
@@ -6,8 +6,11 @@ $gold-card: rgba(198, 165, 100, 0.45);
 
 $sticker: #FFE142;
 $sticker-text: #1D2337;
+$myyellow: #DEC33E;
 
 $grey: #CCCCCC;
 $grey-box: #C4C4C4;
 $grey-text: #707070;
 $transparent-grey: rgba(193, 171, 101, 0.2);
+
+$redheart: #FB4B3B;
