--- a/src/assets/styles/_film_main.scss
+++ b/src/assets/styles/_film_main.scss
@@ -8,6 +8,64 @@
   }
 }
 
+form.search {
+  position: relative;
+}
+
+.searchRes {
+  font-family: "Josefin Sans",sans-serif;
+  top: 122px;
+  overflow: auto;
+  position: absolute;
+  list-style: none;
+  background-color: white;
+  color: black;
+  margin-top: -40px!important;
+  font-weight: 400;
+  z-index:1;
+  width: 100%;
+  margin: 0 auto;
+  max-height:140px;
+
+  & li {
+    padding: 6px 20px;
+    text-align: left;
+  }
+}
+
+.star:before {
+  font-family: "Font Awesome 5 Free";
+  content: "\2605";
+  color: $sticker;
+  font-weight: bold;
+  padding-right:10px;
+}
+
+.heart:before {
+  font-size: 22px;
+  font-family: "Font Awesome 5 Free";
+  content: "\f004";
+  color: $redheart;
+  padding-left:20px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.heart:hover  {
+  cursor: pointer;
+
+  &:before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f004";
+    color: $redheart;
+    font-weight: bold;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+}
+
+.rtNum {
+  color: $myyellow;
+}
+
 .dTablet {
   display: none;
 }
@@ -75,6 +133,10 @@
   & .fImgCard img {
     height:260px;
     object-fit: cover;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   & .fTextCard {
@@ -101,10 +163,6 @@
     & p:last-child {
       font-size: 16px;
     }
-  }
-
-  & :hover {
-    cursor: pointer;
   }
 }
 
@@ -271,6 +329,9 @@ button.accordion {
 }
 
 @media (max-width: 991px) {
+  .searchRes {
+    top: 96px;
+  }
   #film-main {
     padding-top: 40px;
     & .hText {
@@ -329,6 +390,14 @@ button.accordion {
 }
 
 @media (max-width: 767px) {
+  .searchRes {
+    top: 81px;
+
+    & li {
+      font-size: 15px;
+      padding: 4px 10px;
+    }
+  }
   .tabColReverse {
     flex-direction: column-reverse;
   }
@@ -401,6 +470,12 @@ button.accordion {
     }
   }
 
+}
+
+@media (max-width: 510px) {
+  .searchRes {
+    top: 75px;
+  }
 }
 
 @media (max-width: 425px) {
