--- a/src/assets/styles/_film_view.scss
+++ b/src/assets/styles/_film_view.scss
@@ -10,6 +10,15 @@
   & > .container > .row {
     margin-top: 100px;
   }
+
+  .heart:before {
+    padding-left:0px;
+    padding-right:10px;
+  }
+}
+
+.pr20{
+  padding-right: 20px;
 }
 
 .fBox {
@@ -37,6 +46,18 @@
     font-family: Montserrat;
     color: white;
     font-size: 17px;
+  }
+
+  &:last-child {
+    margin-top: 15px;
+
+    & p {
+      font-family: Playfair Display;
+      font-style: normal;
+      font-weight: normal;
+      color: $gold;
+      text-transform: uppercase;
+    }
   }
 }
 
@@ -132,11 +153,19 @@
   background: rgba(85, 85, 85, 0.1);
   margin-bottom: 50px;
 
+  & .rating {
+    margin-top: 0;
+  }
+
   &.crComment {
     background: rgba(85, 85, 85, 0.1);
     border: 1px solid rgba(198, 165, 100, 0.2);
     box-sizing: border-box;
     padding: 30px 37px;
+
+    & p.gold {
+      color: $gold;
+    }
   }
 
   &.rComment {
@@ -222,6 +251,8 @@ textarea {
   font-size: 16px;
   line-height: 20px;
   float: right;
+  margin-top: auto;
+  margin-bottom: auto;
 
   &:hover {
     background-color: white!important;
@@ -293,6 +324,7 @@ textarea {
   }
   .imgWrap img {
       width: 35%;
+      margin: 0 auto;
   }
   .fText p {
     font-size: 14px;
@@ -319,6 +351,9 @@ textarea {
   }
   .d-tablet-none {
     display: none;
+  }
+  .rating span {
+    margin-right: 7px;
   }
 }
 
@@ -397,5 +432,8 @@ textarea {
     letter-spacing: 2px;
     width: fit-content;
     padding-bottom: 10px;
+  }
+  .fTable {
+    margin-bottom: 15px;
   }
 }
