--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -1,7 +1,9 @@
 #login{
+  position: fixed;
+  z-index: 100;
   width: 100%;
   height: 100vh;
-  background: url("../../../public/img/title.jpg") center no-repeat;
+  //background: url("../../../public/img/title.jpg") center no-repeat;
   background-size: cover;
 }
 .login-wrap{
