--- a/src/assets/styles/_register.scss
+++ b/src/assets/styles/_register.scss
@@ -44,6 +44,10 @@ form.regForm {
             box-shadow: none;
             border-bottom: 2px solid $gold;
         }
+
+        &:-internal-autofill-selected {
+            background-color:rgba(0,0,0,0) !important;
+        }
     }
     & label.form-check-label {
         font-family: Poppins, sans-serif;
