--- a/src/assets/styles/authorization.scss
+++ b/src/assets/styles/authorization.scss
@@ -19,13 +19,14 @@
 }
 
 .auth-close {
-  position: absolute;
+  position: fixed;
   z-index: 101;
   top: 80px;
   right: 100px;
   font-size: 40px;
   color: #fff;
   transition: opacity ease 0.4s;
+  cursor: pointer;
 
   &:hover {
     opacity: 0.5;
@@ -36,6 +37,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 auto;
+  width: fit-content;
 }
 .authorization-text--wrap input{
   background-color: #ffffff;
