--- a/src/assets/styles/_film_main.scss
+++ b/src/assets/styles/_film_main.scss
@@ -13,7 +13,7 @@ form.search {
 }
 
 .searchRes {
-  font-family: "Josefin Sans",sans-serif;
+  font-family: Montserrat;
   top: 122px;
   overflow: auto;
   position: absolute;
@@ -27,9 +27,40 @@ form.search {
   margin: 0 auto;
   max-height:140px;
 
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(100,100,100,0.8);
+  }
+
   & li {
     padding: 6px 20px;
     text-align: left;
+    border-bottom: 1px solid black;
+
+    &:first-child {
+      border-top: 1px solid black;
+    }
+
+    &:last-child {
+        border-bottom: none;
+    }
+
+    & a {
+      color:black;
+      line-height: 16px;
+      letter-spacing: 0.5px;
+    }
   }
 }
 
@@ -148,6 +179,15 @@ form.search {
     & h5 {
       font-size: 20px;
       margin-bottom: 15px;
+
+      & a {
+        color: white!important;
+
+        &:hover {
+          color: black!important;
+          text-decoration: none;
+        }
+      }
     }
 
     & .sticker {
