--- a/src/assets/styles/_film_view.scss
+++ b/src/assets/styles/_film_view.scss
@@ -77,6 +77,10 @@
       border-top: 1px solid $grey-box!important;
       padding: 20px 0px;
       font-size: 15px;
+
+      &:last-child {
+        padding-left: 10px;
+      }
     }
   }
 }
