--- a/src/assets/styles/_title.scss
+++ b/src/assets/styles/_title.scss
@@ -49,7 +49,7 @@
   padding: 6px 20px;
   border: none;
   font-size: 20px;
-  font-family: "Josefin Sans",sans-serif;
+  font-family: Montserrat;
   font-style: normal;
   color: #161616;
   margin: 40px 0;
