--- a/src/assets/styles/error.scss
+++ b/src/assets/styles/error.scss
@@ -8,6 +8,7 @@
   background: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100vh;
+  padding-top: 150px;
 }
 .error-wrap .container{
   padding: 50px 0;
@@ -25,6 +26,9 @@
   .error-text h1{
     font-size: 32px;
   }
+  .error-wrap {
+    padding-top: 50px;
+  }
 }
 @media (max-width: 580px) {
   .error-text {
@@ -32,6 +36,9 @@
   }
   .error-text h1{
     font-size: 28px;
+  }
+  .error-wrap {
+    padding-top: 0px;
   }
 }
 @media (max-width: 425px){
